Massive clean up and overhaul of the build system to push project to 2.8.0